feat: add terminology management and web search functionality, update subtitle processing

--- a/env.example
+++ b/env.example
@@ -21,5 +21,30 @@ USE_THREE_STAGE_TRANSLATION=true
 USE_SMART_SPLIT=true
 EXTRACT_TERMINOLOGY=true
 
+# ===== 术语库配置 =====
+USE_PREDEFINED_TERMS=true
+AUTO_EXTRACT_TERMS=true
+CUSTOM_TERMINOLOGY_PATH=
+MAX_TERMS_IN_PROMPT=50
+
+# ===== 网络搜索配置 =====
+# 启用网络搜索功能（可选，需要API密钥）
+ENABLE_WEB_SEARCH=false
+
+# 搜索API配置（至少配置一个才能启用网络搜索）
+SERPER_API_KEY=
+BING_SEARCH_API_KEY=
+
+# 搜索参数
+MAX_WEB_SEARCH_TERMS=5
+WEB_SEARCH_CACHE_DAYS=30
+
+# ===== 翻译质量控制 =====
+CHECK_TERMINOLOGY=true
+AUTO_CORRECT=true
+TRANSLATION_TEMPERATURE=0.2
+TRANSLATION_MAX_RETRIES=3
+TRANSLATION_TIMEOUT=180
+
 # Redis 配置（可选）
 REDIS_URL=redis://redis:6379 
